apps/codebuddy-real-campaign/level-7-ai-ops/.codebuddy/tool-results/call_1772392541048_o21tuurossr.txt
file:///mnt/d/CascadeProjects/grok-cli/apps/codebuddy-real-campaign/level-7-ai-ops/smoke-test.mjs:168
        import { spawn } from 'child_process';
               ^

SyntaxError: Unexpected token '{'
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)

Node.js v18.20.8